--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">xindong</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">怦然心动</string>
+    <string name="action_login">登录微博</string>
+    <string name="action_flush">刷新</string>
 </resources>
